--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,3 @@
 # Put all global configuration here
-some.property=global
-some.other.property=global
+hello.property=global
+hello.other.property=global
