--- a/config-client-app.properties
+++ b/config-client-app.properties
@@ -1,3 +1,3 @@
 # Put application-specific config here (application name: client-config-app)
-hello.property=app specific overridden value
+hello.property=coffee
 hello.other.property=hi Dear
